--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "recharts": "^2.1.6",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
