--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.1.6",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -42,6 +42,15 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.34"
+    "@types/react": "^17.0.34",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-dev-server": "^4.5.0"
+  },
+  "engines": {
+    "node": "v16.13.0",
+    "npm": "8.1.0"
   }
 }
