--- a/package.json
+++ b/package.json
@@ -42,12 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.34",
-    "html-webpack-plugin": "^5.5.0",
-    "webpack": "^5.64.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-middleware": "^5.2.1",
-    "webpack-dev-server": "^4.5.0"
+    "@types/react": "^17.0.34"
   },
   "engines": {
     "node": "v16.13.0",
